# PythonCodeEditor

./: .replit  app.py  pyproject.toml  replit.md
attached_assets/: Pasted-Design-and-implement-a-fully-functional-code-editor-application-in-Python-that-integrates-modern-mac-1761106795234_1761106795235.txt
config/: languages.py  ml_config.py
services/: ai_service.py  code_analyzer.py  code_executor.py  inline_completion.py  language_handler.py  smart_completion.py
utils/: formatters.py  security.py
